[gd_scene load_steps=10 format=2]

[ext_resource path="res://app/interface/icon_button/icon_button.tscn" type="PackedScene" id=1]
[ext_resource path="res://app/modules/queue/queue.gd" type="Script" id=2]
[ext_resource path="res://app/icons/queue_once.svg" type="Texture" id=3]
[ext_resource path="res://app/icons/queue_repeat.svg" type="Texture" id=4]
[ext_resource path="res://app/icons/queue_shuffle.svg" type="Texture" id=5]
[ext_resource path="res://app/icons/queue_repeat_single.svg" type="Texture" id=6]
[ext_resource path="res://app/modules/queue/queue_item.tscn" type="PackedScene" id=7]
[ext_resource path="res://app/interface/track/list/track_list_view.tscn" type="PackedScene" id=8]

[sub_resource type="StyleBoxEmpty" id=1]
content_margin_left = 8.0
content_margin_right = 8.0
content_margin_top = 8.0
content_margin_bottom = 8.0

[node name="Queue" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
queue_modes = [ ExtResource( 4 ), ExtResource( 6 ), ExtResource( 3 ) ]
queue_hints = [ "QUEUE_MODE_REPEAT", "QUEUE_MODE_REPEAT_SINGLE", "QUEUE_MODE_ONCE" ]

[node name="Top" type="HBoxContainer" parent="."]
margin_right = 1280.0
margin_bottom = 30.0

[node name="Title" type="Label" parent="Top"]
margin_right = 1212.0
margin_bottom = 30.0
size_flags_horizontal = 3
custom_styles/normal = SubResource( 1 )
text = "QUEUE_TITLE"
align = 1

[node name="Shuffle" parent="Top" instance=ExtResource( 1 )]
modulate = Color( 0, 0, 0, 1 )
margin_left = 1216.0
margin_right = 1246.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 0 )
texture = ExtResource( 5 )
hint = "QUEUE_SHUFFLE"

[node name="Mode" parent="Top" instance=ExtResource( 1 )]
modulate = Color( 0, 0, 0, 1 )
margin_left = 1250.0
margin_right = 1280.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 0 )
texture = ExtResource( 4 )

[node name="Texture" parent="Top/Mode" index="0"]
rect_min_size = Vector2( 15, 15 )
texture = ExtResource( 4 )

[node name="Hint" parent="Top/Mode" index="1"]
hide_on_release = false

[node name="TrackListView" parent="." instance=ExtResource( 8 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 30.0
margin_right = 1280.0
margin_bottom = 720.0
size_flags_vertical = 3
item_scene = ExtResource( 7 )
editable = true
playable = false

[node name="Tween" type="Tween" parent="."]

[connection signal="pressed" from="Top/Shuffle" to="." method="_on_Shuffle_pressed"]
[connection signal="pressed" from="Top/Mode" to="." method="_on_Mode_pressed"]

[editable path="Top/Mode"]
